--- a/.github/workflows/gladoscheckin.yml
+++ b/.github/workflows/gladoscheckin.yml
@@ -1,9 +1,13 @@
-# This is a basic workflow to help you get started with Actions
-
 name: GladosCheckIn
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   schedule:
-  - cron: 0 0 * * *
+  - cron: 10 11 * * *
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check in
+        run: echo Hello, world!
