--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -1,4 +1,4 @@
-name: CheckIn
+name: GLaDOS-CheckIn
 on:
   push:
     branches: [ main ]
@@ -6,9 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!push
+      - name: setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: install axios
+        run: npm install axios
+      - name: CheckIn
+        run: node checkin.js 
+        env:
+          SCKEY: ${{ secrets.SCKEY }}
+          COOKIE: ${{ secrets.COOKIE }}
