--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: install axios
-        run: npm install axios
+        run: npm install axios -g
       - name: CheckIn
         run: node checkin.js 
         env:
