--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -6,12 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: setup Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
       - name: install axios
-        run: npm install axios -g
+        run: npm install axios
       - name: CheckIn
         run: node checkin.js 
         env:
