--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -1,7 +1,7 @@
 name: GLaDOS-CheckIn
 on:
-  push:
-    branches: [ main ]
+  schedule:
+        - cron: 01 0 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
