--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -1,7 +1,9 @@
 name: GLaDOS-CheckIn
 on:
+  push:
+    branches: [ master ]
   schedule:
-        - cron: 30 1 * * *
+    - cron: 30 1 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
