--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main ]
   schedule:
     - cron: 30 1 * * *
+  watch:
+    types: [started]
 jobs:
   build:
     runs-on: ubuntu-latest
