--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -2,6 +2,9 @@ name: GLaDOS-CheckIn
 on:
   push:
     branches: [ main ]
+    paths-ignore: 
+      - 'README.md'
+      - 'imgs/**'
   schedule:
     - cron: 30 1 * * *
   watch:
