--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -26,3 +26,4 @@ jobs:
         env:
           SCKEY: ${{ secrets.SCKEY }}
           COOKIE: ${{ secrets.COOKIE }}
+          COOKIES: ${{ secrets.COOKIES }}
