--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -21,11 +21,8 @@ jobs:
           node-version: '14.x'
       - name: install axios
         run: npm install axios
-      - name: install qs
-        run: npm install qs
       - name: CheckIn
         run: node checkin.js
         env:
-          SCKEY: ${{ secrets.SCKEY }}
-          COOKIE: ${{ secrets.COOKIE }}
+          PUSHPLUS: ${{ secrets.PUSHPLUS }}
           COOKIES: ${{ secrets.COOKIES }}
