--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: 错误报告
-description: 创建一个报告来帮助我们改进
+description: 创建一个报告来帮助我们改进。
 title: "[Bug]: "
 labels: ["bug"]
 assignees:
@@ -23,14 +23,14 @@ body:
     id: current-behavior
     attributes:
       label: 当前行为
-      description: 告诉我们实际发生什么
+      description: 告诉我们实际发生什么。
     validations:
       required: true
   - type: textarea
     id: expected-behavior
     attributes:
       label: 预期行为
-      description: 告诉我们应该发生什么
+      description: 告诉我们应该发生什么。
     validations:
       required: true
   - type: textarea
@@ -43,6 +43,8 @@ body:
         3. 点击 build
         4. 点击右上角选项，选择 "View raw logs"
         5. 复制logs，去除账号信息，粘贴到下方文本域
+    validations:
+      required: true
   - type: markdown
     attributes:
       value: "## 自我尝试"
