--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: '14.x'
       - name: install axios
         run: npm install axios
+      - name: install puppeteer-extra-plugin-stealth
+        run: npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth
       - name: CheckIn
         run: node checkin.js
         env:
