--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -1,28 +1,20 @@
-# File: .github/workflows/repo-sync.yml
-name: gl
+name: Sync(同步/升级部署脚本) #一般无需手动执行,部署脚本每次执行就是部署最新代码,这个脚本只是用来升级部署脚本,部署脚本基本不更新
 on:
   schedule:
-    - cron: '1 0,15 * * *'
+    - cron: '0 16,22,4,10 * * *'
   workflow_dispatch:
-  watch:
-    types: started
-  push:
-    branches: [ master ]
-  repository_dispatch:
-    types: gl
 jobs:
   repo-sync:
     env:
-      PAT: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：https://www.jianshu.com/p/bb82b3ad1d11
-      dst_key: ${{ secrets.GITEE_PRIVATE_KEY }} # 我自己同步到gitee使用，其他人可忽略
+      PAT: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：https://www.jianshu.com/p/bb82b3ad1d11,需要repo和workflow权限
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-
-      - name: sync gl
+      - name: sync
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
@@ -30,13 +22,3 @@ jobs:
           source_branch: "main"
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
-      # 我自己同步到gitee使用，其他人可忽略
-      - name: sync github -> gitee
-        uses: Yikun/hub-mirror-action@master
-        if: env.dst_key
-        with:
-          src: github/gl
-          dst: gitee/gl
-          static_list: "jd_scripts"
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-          dst_token: ${{ secrets.GITEE_TOKEN }}
