--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -7,31 +7,29 @@ on:
       - 'README.md'
       - 'imgs/**'
   schedule:
-    - cron: 15 22 * * *
+    - cron: 30 22 * * *
   watch:
     types: [started]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version: '16.x'
       - name: install axios
-        run: npm install axios
+        run: npm install axios@1.1.3
       - name: install puppeteer-extra-plugin-stealth
-        run: npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth
+        run: npm install puppeteer@19.0.0 puppeteer-extra@3.3.4 puppeteer-extra-plugin-stealth@2.11.1
       - name: CheckIn
         run: node checkin.js
         env:
           PUSHPLUS: ${{ secrets.PUSHPLUS }}
           COOKIES: ${{ secrets.COOKIES }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
       - name: keep alive
-        uses: gautamkrishnar/keepalive-workflow@master # using the workflow with default settings
+        uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@v2
         with:
@@ -39,3 +37,4 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 0
           keep_minimum_runs: 10
+          delete_run_by_conclusion_pattern: success
